--- a/templates/member_dashboard.html
+++ b/templates/member_dashboard.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Dashboard</h1>
-    <p>Welcome to your dashboard!</p>
+    <p>{{Welcome}}</p>
     <button onclick="logout()">Logout</button>
     <button onclick="deleteAccount()">Delete Account</button>
     <a href="/book_list">View Books</a>
